--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ janitor==0.1.1
 numpy==1.21.5
 pandas==1.3.5
 pyjanitor==0.22.0
-streamlit==1.7.0
+streamlit==1.17.0
 streamlit_echarts==0.4.0
 streamlit_folium==0.11.0
+protobuf==3.20.0
+altair==4.2.0
